# gpu-pm

./: .gitignore  LICENSE  README.md  meson.build
gltf_test/: fox-light.gltf
gltf_test/ball/: big-ball.gltf
gltf_test/fox/: Fox.gltf
gltf_test/matilda_walls/: matilda.gltf
gltf_test/simple_skin/: SimpleSkin.gltf
include/: camera.hpp  gpu_instance.hpp  light.hpp  material.hpp  mesh.hpp  renderer.hpp  scene.hpp  texture.hpp
shaders/: buffers.comp  main.comp
src/: camera.cpp  gpu_instance.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  renderer.cpp  scene.cpp  texture.cpp
